--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -9,7 +9,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
 ---
 
 <section class="relative h-full bg-black">
-  <div id="splash-bg-fallback" class="absolute inset-0 hidden">
+  <div id="splash-bg-fallback" class="absolute inset-0">
     <!--Hero image -->
     <HeroDev />
   </div>
