--- a/src/pages/page3.astro
+++ b/src/pages/page3.astro
@@ -1,27 +1,9 @@
 ---
 import { Icon } from "astro-icon/components";
+import "swiper/css";
+import "swiper/css/navigation";
+import "swiper/css/pagination";
 ---
-
-<script type="module">
-    // import Swiper JS
-    import Swiper from "./node_modules/swiper/swiper-bundle.mjs";
-    import "./node_modules/swiper/swiper.css";
-
-    var swiper = new Swiper(".product-thumb", {
-        spaceBetween: 30,
-        slidesPerView: 3,
-
-        freeMode: true,
-        watchSlidesProgress: true,
-    });
-    var swiper2 = new Swiper(".product-prev", {
-        loop: true,
-        spaceBetween: 10,
-        thumbs: {
-            swiper: swiper,
-        },
-    });
-</script>
 
 <style>
     body {
@@ -30,25 +12,70 @@ import { Icon } from "astro-icon/components";
         background-repeat: no-repeat;
         background-size: cover;
     }
-    .swiper-container {
-        width: 100%;
-        height: 100%;
-    }
 
-    .swiper-wrapper {
+    #container {
         width: 100%;
-        height: 100%;
+        height: 80vh;
+      
     }
 
     .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
         display: flex;
         justify-content: center;
         align-items: center;
-        overflow: hidden;
     }
 
     .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .swiper {
+        width: 100%;
+        height: 300px;
+        margin-left: auto;
+        margin-right: auto;
         border-radius: 10px;
+    }
+
+    .swiper-slide {
+        background-size: cover;
+        background-position: center;
+
+    }
+
+    .mySwiper2 {
+        height: 80%;
+        width: 100%;
+    }
+
+
+    .mySwiper {
+        height: 20%;
+        box-sizing: border-box;
+        padding: 10px 0;
+    }
+
+    .mySwiper .swiper-slide {
+        width: 25%;
+        height: 100%;
+        opacity: 0.4;
+    }
+
+    .mySwiper .swiper-slide-thumb-active {
+        opacity: 1;
+    }
+
+    .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .pro-detail {
@@ -56,14 +83,18 @@ import { Icon } from "astro-icon/components";
         backdrop-filter: blur(10px);
         color: white;
         padding: 20px;
+        border-radius: 10px;
     }
 </style>
-<html lang="es">
+
+<html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>asd</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
     </head>
+
+
     <body>
         <header>
             <nav class="bg-[#111827] px-4 py-2.5 text-white lg:px-6">
@@ -87,11 +118,11 @@ import { Icon } from "astro-icon/components";
             </nav>
         </header>
 
-        <section class="relative py-10 lg:py-24">
+        <section class="py-10 lg:py-24">
             <div class="max-w-9xl mx-auto px-4 sm:px-6">
-                <div class="grid grid-cols-1 gap-8 lg:grid-cols-2 lg:gap-16">
+                <div class="grid grid-cols-1 gap-8 lg:grid-cols-2">
                     <div
-                        class="pro-detail order-last mx-auto flex w-full max-w-screen-lg flex-col max-lg:mx-auto max-lg:max-w-[608px] lg:order-none"
+                        class="pro-detail mx-auto flex w-full max-w-screen-lg flex-col max-lg:mx-auto"
                     >
                         <h2
                             class="font-manrope mb-2 font-bold leading-10 text-3xl"
@@ -102,56 +133,127 @@ import { Icon } from "astro-icon/components";
                                     class="display: inline"
                                 /></span
                             >
-                            asf
+                           sdf
                         </h2>
                         <div
                             class="mb-6 flex flex-col sm:flex-row sm:items-center"
                         >
                         </div>
                         <p class="mb-8 font-normal sm:text-base md:text-lg">
-                           dsfsd
+                          sdf
                         </p>
                     </div>
-                    <div class="">
-                        <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff"
-                            class="swiper product-prev mb-6">
+                    <div id="container">
+                        <div
+                            style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff"
+                            class="swiper mySwiper2"
+                        >
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="https://pagedone.io/asset/uploads/1700471851.png"
-                                        alt="Yellow Travel Bag image" class="mx-auto">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-1.jpg"
+                                    />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://pagedone.io/asset/uploads/1711514857.png"
-                                        alt="Yellow Travel Bag image" class="mx-auto">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-2.jpg"
+                                    />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://pagedone.io/asset/uploads/1711514875.png"
-                                        alt="Yellow Travel Bag image" class="mx-auto">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-3.jpg"
+                                    />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://pagedone.io/asset/uploads/1711514892.png"
-                                        alt="Yellow Travel Bag image" class="mx-auto">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-4.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-5.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-6.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-7.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-8.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-9.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-10.jpg"
+                                    />
                                 </div>
                             </div>
-    
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
                         </div>
-                        <div  class="swiper product-thumb max-w-[608px] mx-auto">
+                        <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="https://pagedone.io/asset/uploads/1700471871.png" alt="Travel Bag image"
-                                        class=" cursor-pointer border-2 border-gray-50 transition-all duration-500 hover:border-indigo-600 slide:border-indigo-600">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-1.jpg"
+                                    />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://pagedone.io/asset/uploads/1711514930.png" alt="Travel Bag image"
-                                        class=" cursor-pointer border-2 border-gray-50 transition-all duration-500 hover:border-indigo-600 slide:border-indigo-600">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-2.jpg"
+                                    />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://pagedone.io/asset/uploads/1700471908.png" alt="Travel Bag image"
-                                        class=" cursor-pointer border-2 border-gray-50 transition-all duration-500 hover:border-indigo-600 slide:border-indigo-600">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-3.jpg"
+                                    />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://pagedone.io/asset/uploads/1700471925.png" alt="Travel Bag image"
-                                        class=" cursor-pointer border-2 border-gray-50 transition-all duration-500 hover:border-indigo-600 slide:border-indigo-600">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-4.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-5.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-6.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-7.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-8.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-9.jpg"
+                                    />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img
+                                        src="https://swiperjs.com/demos/images/nature-10.jpg"
+                                    />
                                 </div>
                             </div>
                         </div>
@@ -160,4 +262,32 @@ import { Icon } from "astro-icon/components";
             </div>
         </section>
     </body>
+
+
+
+
 </html>
+
+<script
+    is:client
+    src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script type="module">
+    var swiper = new Swiper(".mySwiper", {
+        loop: true,
+        spaceBetween: 10,
+        slidesPerView: 4,
+        freeMode: true,
+        watchSlidesProgress: true,
+    });
+    var swiper2 = new Swiper(".mySwiper2", {
+        loop: true,
+        spaceBetween: 10,
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+        thumbs: {
+            swiper: swiper,
+        },
+    });
+</script>
