--- a/src/pages/page3.astro
+++ b/src/pages/page3.astro
@@ -267,10 +267,12 @@ import "swiper/css/pagination";
 
 
 </html>
-
+<!-- 
 <script
-    src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>-->
 <script type="module">
+
+     import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs'
     var swiper = new Swiper(".mySwiper", {
         loop: true,
         spaceBetween: 10,
