--- a/src/pages/page3.astro
+++ b/src/pages/page3.astro
@@ -7,7 +7,7 @@ import "swiper/css/pagination";
 
 <style>
     body {
-        background-image: url("./bground.png");
+        background-image: url("bground.png");
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
