arreglado contact form

--- a/src/components/prueba-conceptos.astro
+++ b/src/components/prueba-conceptos.astro
@@ -4,6 +4,6 @@ import ContentSection from "~/components/content-section.astro";
 
 <ContentSection title="Prueba de conceptos" id="conceptos" display="display:none">
   <Fragment slot="lead">
-    Un resumen de mi <span class="text-primary">recorrido</span> y mi <span class="text-primary">formación</span> a lo largo de mi <span class="text-primary">vida</span> hasta la actualidad
+    Pequeños <span class="text-primary">experimentos</span> y  <span class="text-primary">pruebas de concepto</span> que he realizado
   </Fragment>
 </ContentSection>
