--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -11,11 +11,11 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
 <section class="relative h-full bg-black">
   <div id="splash-bg-fallback" class="absolute inset-0">
     <!--Hero image -->
-    <HeroDev />
+    <HeroDev/>
   </div>
   <div class="relative grid h-full place-items-center sm:grid-cols-2">
     <div class="w-full text-5xl sm:text-4xl md:text-5xl xl:text-7xl pl-20 sm:pl-8 md:pl-12 lg:pl-20 xl:pl-20 2xl:pl-70">
-      <h3>Bienvenid@!</h3>
+      <h3 class="text-white">Bienvenid@!</h3>
       <TypyingText />
     </div>
 
