--- a/src/components/textTyping.astro
+++ b/src/components/textTyping.astro
@@ -1,6 +1,6 @@
 
   <div class="input-wrapper">
-    <div style="white-space: nowrap;margin-right: 18px">I'm a</div>
+    <div style="white-space: nowrap;margin-right: 18px; color:white">I'm a</div>
     <span class="placeholder"></span>
   </div>
 
