--- a/src/components/timeline.astro
+++ b/src/components/timeline.astro
@@ -5,7 +5,7 @@ import TimelineComponent from "./timeline-component.astro";
 
 <ContentSection title="Timeline" id="features" display="display:none">
   <Fragment slot="lead">
-    Un resumen de mi <span class="text-primary">recorrido</span> y mi <span class="text-primary">formación</span> a lo largo de mi <span class="text-primary">vida</span> hasta la actualidad
+    Un resumen de mi <span class="text-primary">recorrido</span> y mi <span class="text-primary">formación</span> a lo largo de mi <span class="text-primary">vida</span>
   </Fragment>
   <TimelineComponent></TimelineComponent>
 </ContentSection>
