--- a/src/components/contacto.astro
+++ b/src/components/contacto.astro
@@ -1,19 +1,37 @@
 ---
 import ContentSection from "~/components/content-section.astro";
-
+import { Icon } from "astro-icon/components";
 ---
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-  const form = document.querySelector('form');
+
+
+<script is:client src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script is:client>
+
+ 
+  document.addEventListener("DOMContentLoaded", () => {
+
+    const form = document.querySelector('form');
+    // evento solo numeros en campo telefono
+    document.querySelectorAll(".itemForm")[1].addEventListener("input",(event)=>{
+    event.target.value = event.target.value.replace(/\D/g, '');
+  });
+
+    if (form) {
+      form.addEventListener("submit", async (event) => {
+        event.preventDefault();
+        checkInputs();
+
+        if(!checkInputs()){
+          console.log("datos incompletos")
+        } else{
+        
+
+          // inicio del envio
   
-  if (form) {
-    form.addEventListener('submit', async (event) => {
-      event.preventDefault();
-      const formData = new FormData(form);
       const body = {
-        name: formData.get("name"),
-        email: formData.get("mail"),
-        message: formData.get("message"),
+        name: document.querySelectorAll(".itemForm")[0].value,
+        email: document.querySelectorAll(".itemForm")[1].value,
+        message: document.querySelectorAll(".itemForm")[2].value,
       }
       
       try {
@@ -34,37 +52,72 @@ import ContentSection from "~/components/content-section.astro";
       } catch (error) {
         console.error('Error en la solicitud:', error);
       }
-    });
-  }
-});
+    
 
-  </script>
+
+    // fin del envio
+     
+        const Toast = Swal.mixin({
+  toast: true,
+  position: "center",
+  showConfirmButton: false,
+  timer: 1500,
+  timerProgressBar: true
+});
+Toast.fire({
+  icon: "success",
+  title: "Enviado exitosamente!"
+});  
+ // vacío los inputs
+ document.querySelectorAll(".itemForm")[0].value = "";
+          document.querySelectorAll(".itemForm")[1].value = "";
+          document.querySelectorAll(".itemForm")[2].value = "";
+}
+      });
+      
+    }
+  });
+   
+
+  function checkInputs(){
+    const items = document.querySelectorAll(".itemForm");
+    let allCheck = true;
+    for(const item of items){
+      if(item.value == ""){
+        item.classList.add("error");
+        item.nextElementSibling.classList.add("addError");
+        allCheck = false;
+      }
+
+      item.addEventListener("keyup", () => {
+        if(item.value != ""){
+         item.classList.remove("error");
+          item.nextElementSibling.classList.remove("addError");
+        } else{
+          item.classList.add("error");
+          item.nextElementSibling.classList.add("addError");
+        }
+      });
+    }
+    return allCheck;
+  }
+</script>
+
 <ContentSection title="Contacto" id="contacto" display="display:none">
   <Fragment slot="lead">
   </Fragment>
 
-
-  <form>
-    <input name="name" type="text" class="text-black"/>
-    <input name="mail" type="text" class="text-black"/>
-    <input name="message" type="text" class="text-black"/>
-    <button type="submit">Enviar</button>
-  </form>
-
-
   <div class="mt-6 max-w-7xl max-lg:max-w-3xl mx-auto bg-[#2E3D53] rounded-lg">
     <div class="grid lg:grid-cols-2 items-center gap-14 sm:p-8 p-4 font-[sans-serif]">
-        <div>
+        <div class="flex flex-col items-center md:items-start">
             <h1 class="text-4xl font-bold text-white">Ponte en contacto</h1>
-            <p class="text-sm text-gray-300 mt-4 leading-relaxed">¿Tienes una gran idea o marca para desarrollar y necesitas ayuda? Ponte en contacto conmigo. Me encantaría conocer tu proyecto y brindarte ayuda.</p>
-
+            <p class="text-sm text-gray-300 mt-4 leading-relaxed px-10 md:px-0">¿Tienes una gran idea o marca para desarrollar y necesitas ayuda? Ponte en contacto conmigo. Me encantaría conocer tu proyecto y brindarte ayuda.</p>
             <br>
             <img
                     src="./imgProgramming.webp"
                     class="h-auto max-w-80 rounded-lg shadow-none"
-                    alt=""
+                    alt="imagen programando"
                 />
-                
             <ul class="mt-12 space-y-8">
                 <li class="flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" fill='#fff'
@@ -77,13 +130,9 @@ import ContentSection from "~/components/content-section.astro";
                         fguzzodev@gmail.com
                     </a>
                 </li>
-                <li class="flex items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" fill='#fff' viewBox="0 0 482.6 482.6">
-                        <path d="M98.339 320.8c47.6 56.9 104.9 101.7 170.3 133.4 24.9 11.8 58.2 25.8 95.3 28.2 2.3.1 4.5.2 6.8.2 24.9 0 44.9-8.6 61.2-26.3.1-.1.3-.3.4-.5 5.8-7 12.4-13.3 19.3-20 4.7-4.5 9.5-9.2 14.1-14 21.3-22.2 21.3-50.4-.2-71.9l-60.1-60.1c-10.2-10.6-22.4-16.2-35.2-16.2-12.8 0-25.1 5.6-35.6 16.1l-35.8 35.8c-3.3-1.9-6.7-3.6-9.9-5.2-4-2-7.7-3.9-11-6-32.6-20.7-62.2-47.7-90.5-82.4-14.3-18.1-23.9-33.3-30.6-48.8 9.4-8.5 18.2-17.4 26.7-26.1 3-3.1 6.1-6.2 9.2-9.3 10.8-10.8 16.6-23.3 16.6-36s-5.7-25.2-16.6-36l-29.8-29.8c-3.5-3.5-6.8-6.9-10.2-10.4-6.6-6.8-13.5-13.8-20.3-20.1-10.3-10.1-22.4-15.4-35.2-15.4-12.7 0-24.9 5.3-35.6 15.5l-37.4 37.4c-13.6 13.6-21.3 30.1-22.9 49.2-1.9 23.9 2.5 49.3 13.9 80 17.5 47.5 43.9 91.6 83.1 138.7zm-72.6-216.6c1.2-13.3 6.3-24.4 15.9-34l37.2-37.2c5.8-5.6 12.2-8.5 18.4-8.5 6.1 0 12.3 2.9 18 8.7 6.7 6.2 13 12.7 19.8 19.6 3.4 3.5 6.9 7 10.4 10.6l29.8 29.8c6.2 6.2 9.4 12.5 9.4 18.7s-3.2 12.5-9.4 18.7c-3.1 3.1-6.2 6.3-9.3 9.4-9.3 9.4-18 18.3-27.6 26.8l-.5.5c-8.3 8.3-7 16.2-5 22.2.1.3.2.5.3.8 7.7 18.5 18.4 36.1 35.1 57.1 30 37 61.6 65.7 96.4 87.8 4.3 2.8 8.9 5 13.2 7.2 4 2 7.7 3.9 11 6 .4.2.7.4 1.1.6 3.3 1.7 6.5 2.5 9.7 2.5 8 0 13.2-5.1 14.9-6.8l37.4-37.4c5.8-5.8 12.1-8.9 18.3-8.9 7.6 0 13.8 4.7 17.7 8.9l60.3 60.2c12 12 11.9 25-.3 37.7-4.2 4.5-8.6 8.8-13.3 13.3-7 6.8-14.3 13.8-20.9 21.7-11.5 12.4-25.2 18.2-42.9 18.2-1.7 0-3.5-.1-5.2-.2-32.8-2.1-63.3-14.9-86.2-25.8-62.2-30.1-116.8-72.8-162.1-127-37.3-44.9-62.4-86.7-79-131.5-10.3-27.5-14.2-49.6-12.6-69.7z" data-original="#000000"></path>
-                    </svg>
-                    <a href="javascript:void(0)" class="text-white text-sm ml-4">
-                        +598 92688373
-                    </a>
+                <li class="flex" style="align-items: center;">
+                  <Icon name="mdi:whatsapp"/>
+                    <a href="https://api.whatsapp.com/send/?phone=59892688373" title="Enviar mensaje" class="text-white text-sm ml-4">+598 92688373</a>
                 </li>
             </ul>
 
@@ -95,24 +144,55 @@ import ContentSection from "~/components/content-section.astro";
 
         <div class="bg-gray-100 p-6 rounded-lg">
 
-            <form class="mt-8 space-y-4">
-                <input type='text' placeholder='Nombre'
-                    class="w-full rounded-lg py-3 px-4 text-gray-800 text-sm outline-[#a91079]" />
-                <input type='email' placeholder='Email'
-                    class="w-full rounded-lg py-3 px-4 text-gray-800 text-sm outline-[#a91079]" />
-                <input type='text' placeholder='Asunto'
-                    class="w-full rounded-lg py-3 px-4 text-gray-800 text-sm outline-[#a91079]" />
-                <textarea placeholder='Mensaje' rows="6"
-                    class="w-full rounded-lg px-4 text-gray-800 text-sm pt-3 outline-[#a91079]"></textarea>
-                <button type='button'
-                    class="text-white bg-[#a91079] hover:bg-[#a91079e2] tracking-wide rounded-lg text-sm px-4 py-3 flex items-center justify-center w-full !mt-6">
+            <form id="contactForm" class="mt-8">
+                <div class="contWrapper">
+                  <input type='text' name='name' placeholder='Nombre'
+                      class="itemForm w-full rounded-lg py-3 px-4 text-gray-800 text-sm outline-[#2E3D53]" />
+                      <div class="error-txt">El nombre no puede estar en blanco</div>
+                </div>
+                <div class="contWrapper">
+                  <input type='text' name='celphone' placeholder='Teléfono'
+                      class="itemForm w-full rounded-lg py-3 px-4 text-gray-800 text-sm outline-[#2E3D53]" maxlength="12"/>
+                      <div class="error-txt">El celular no puede estar en blanco</div>
+                </div>
+                <div style="min-height: 210px;">
+                  <textarea name='message' placeholder='Mensaje' rows="6"
+                      class="itemForm w-full rounded-lg px-4 text-gray-800 text-sm pt-3 outline-[#2E3D53]"></textarea>
+                      <span class="error-txt">El mensaje no puede estar en blanco</span>
+                </div>
+                <button type='submit'
+                    class="text-white bg-[#a91079] hover:bg-[#a91079e2] tracking-wide rounded-lg text-sm px-4 py-3 flex items-center justify-center w-full !mt-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" fill='#fff' class="mr-2" viewBox="0 0 548.244 548.244">
                         <path fill-rule="evenodd" d="M392.19 156.054 211.268 281.667 22.032 218.58C8.823 214.168-.076 201.775 0 187.852c.077-13.923 9.078-26.24 22.338-30.498L506.15 1.549c11.5-3.697 24.123-.663 32.666 7.88 8.542 8.543 11.577 21.165 7.879 32.666L390.89 525.906c-4.258 13.26-16.575 22.261-30.498 22.338-13.923.076-26.316-8.823-30.728-22.032l-63.393-190.153z" clip-rule="evenodd" data-original="#000000" />
                     </svg>
                     Enviar mensaje
                 </button>
             </form>
+            
         </div>
     </div>
 </div>
 </ContentSection>
+
+<style>
+  .error-txt{
+    font-size: 16px;
+    color:#d93025;
+    text-align: left;
+    margin: 0 5px;
+    display: none;
+   
+  }
+
+  .itemForm.error{
+    border: 2px solid #d93025;
+  }
+
+  .addError{
+    display: block;
+  }
+
+  .contWrapper{
+    min-height: 90px;
+  }
+</style>
