--- a/src/components/proyectos.astro
+++ b/src/components/proyectos.astro
@@ -14,9 +14,9 @@ const orderedSites = featuredSites.sort(
 
 <ContentSection title="Proyectos" id="proyectos" display="display:none">
   <Fragment slot="lead">
-    Astro is <span class="text-primary">versatile</span>.{" "}
-    <span class="text-primary">Explore</span> what's possible and get{" "}
-    <span class="text-primary">inspired</span>.
+   Un vistazo <span class="text-primary">rápido</span>
+   sobre mis últimos
+    <span class="text-primary">proyectos</span>
   </Fragment>
   <div class="max-w-6xl space-y-2">
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
