--- a/src/components/conocimientos.astro
+++ b/src/components/conocimientos.astro
@@ -100,12 +100,12 @@ const platforms: Array<CompatibilityItem> = [
   </Fragment>
   <CompatibilityList
     items={languages}
-    title="Languages"
+    title="Lenguajes"
     url="https://docs.astro.build/core-concepts/framework-components/"
   />
   <CompatibilityList
     items={platforms}
-    title="Framewokrs and platforms"
+    title="Framewokrs y plataformas"
     url="https://docs.astro.build/guides/deploy/"
   />
 </ContentSection>
