--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -4,8 +4,8 @@ import type { FooterLink } from "~/types";
 
 const links: Array<FooterLink> = [
   {
-    url: "#",
-    description: "Astro's official website",
+    url: "/",
+    description: "Home",
     icon: "mdi:home",
   },
   {
