--- a/src/components/timeline-component.astro
+++ b/src/components/timeline-component.astro
@@ -14,7 +14,7 @@
         <li>
             <div class="content">
                 <h3>Analista Programador – Universidad ORT del Uruguay</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and</p>
+                <p>Desarrollador web y AP</p>
             </div>
             <div class="time">
                 <h4>2020-2024</h4>
