--- a/src/pages/task-manager.astro
+++ b/src/pages/task-manager.astro
@@ -16,7 +16,6 @@ import "swiper/css/pagination";
     #container {
         width: 100%;
         height: 80vh;
-      
     }
 
     .swiper-slide {
@@ -46,14 +45,12 @@ import "swiper/css/pagination";
     .swiper-slide {
         background-size: cover;
         background-position: center;
-
     }
 
     .mySwiper2 {
         height: 80%;
         width: 100%;
     }
-
 
     .mySwiper {
         height: 20%;
@@ -91,9 +88,8 @@ import "swiper/css/pagination";
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Task Manager</title>
     </head>
-
 
     <body>
         <header>
@@ -133,15 +129,64 @@ import "swiper/css/pagination";
                                     class="display: inline"
                                 /></span
                             >
-                           sdf
+                            Task Manager
                         </h2>
                         <div
                             class="mb-6 flex flex-col sm:flex-row sm:items-center"
                         >
                         </div>
                         <p class="mb-8 font-normal sm:text-base md:text-lg">
-                          sdf
+                            Un simple administrador de tareas, esta app surge
+                            con la necesidad de guardar notas rápidas y llevar
+                            un seguimiento de tareas accesible. Construido
+                            enteramente en vanilla JS, usa el Local Storage del
+                            navegador para persistir las tareas en el mismo y
+                            así obtenerlas luego del cierre del mismo.
                         </p>
+                        <hr />
+                        <div
+                            class="mt-10 flex flex-col items-center gap-10 text-center"
+                        >
+                            <div>
+                                <h1 class="font-bold text-xl my-3">Tecnologías</h1>
+                                <p>
+                                    <span
+                                        class="me-2 rounded bg-gray-100 px-2.5 py-0.5 font-medium text-gray-800 text-xs dark:bg-gray-700 dark:text-gray-300"
+                                        >HTML</span
+                                    >
+                                    <span
+                                        class="me-2 rounded bg-gray-100 px-2.5 py-0.5 font-medium text-gray-800 text-xs dark:bg-gray-700 dark:text-gray-300"
+                                        >Javascript</span
+                                    >
+                                    <span
+                                        class="me-2 rounded bg-gray-100 px-2.5 py-0.5 font-medium text-gray-800 text-xs dark:bg-gray-700 dark:text-gray-300"
+                                        >CSS</span
+                                    >
+                                </p>
+                            </div>
+                            <div>
+                                <a
+                                    href="https://nerodovahkiin.github.io/taskApp/"
+                                    class="inline-flex items-center justify-center rounded-lg bg-gray-50 p-2 px-4 font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                                >
+                                    <span class="w-full">Ver una demo</span>
+                                    <svg
+                                        class="ms-2 h-4 w-4 rtl:rotate-180"
+                                        aria-hidden="true"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        fill="none"
+                                        viewBox="0 0 14 10"
+                                    >
+                                        <path
+                                            stroke="currentColor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            stroke-width="2"
+                                            d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div id="container">
                         <div
@@ -150,54 +195,13 @@ import "swiper/css/pagination";
                         >
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-1.jpg"
-                                    />
+                                    <img src="/proyectos/task1-min.png" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-2.jpg"
-                                    />
+                                    <img src="/proyectos/task2.png" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-3.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-4.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-5.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-6.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-7.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-8.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-9.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-10.jpg"
-                                    />
+                                    <img src="/proyectos/task3.png" />
                                 </div>
                             </div>
                             <div class="swiper-button-next"></div>
@@ -206,54 +210,13 @@ import "swiper/css/pagination";
                         <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-1.jpg"
-                                    />
+                                    <img src="/proyectos/task1-min.png" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-2.jpg"
-                                    />
+                                    <img src="/proyectos/task2.png" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-3.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-4.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-5.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-6.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-7.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-8.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-9.jpg"
-                                    />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img
-                                        src="https://swiperjs.com/demos/images/nature-10.jpg"
-                                    />
+                                    <img src="/proyectos/task3.png" />
                                 </div>
                             </div>
                         </div>
@@ -262,21 +225,16 @@ import "swiper/css/pagination";
             </div>
         </section>
     </body>
-
-
-
-
 </html>
 <!-- 
 <script
     src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>-->
 <script type="module">
-
-     import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs'
+    import Swiper from "https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs";
     var swiper = new Swiper(".mySwiper", {
         loop: true,
-        spaceBetween: 10,
-        slidesPerView: 4,
+        spaceBetween:20,
+        slidesPerView: 3,
         freeMode: true,
         watchSlidesProgress: true,
     });
