reparado proyectos, hero, etc

--- a/src/components/contacto.astro
+++ b/src/components/contacto.astro
@@ -130,9 +130,9 @@ Toast.fire({
                         fguzzodev@gmail.com
                     </a>
                 </li>
-                <li class="flex" style="align-items: center;">
+                <li class="flex text-white" style="align-items: center;">
                   <Icon name="mdi:whatsapp"/>
-                    <a href="https://api.whatsapp.com/send/?phone=59892688373" title="Enviar mensaje" class="text-white text-sm ml-4">+598 92688373</a>
+                    <a href="https://api.whatsapp.com/send/?phone=59892688373" title="Enviar mensaje" class="text-sm ml-4">+598 92688373</a>
                 </li>
             </ul>
 
