--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -4,7 +4,7 @@ import type { FooterLink } from "~/types";
 
 const links: Array<FooterLink> = [
   {
-    url: "/",
+    url: "#",
     description: "Home",
     icon: "mdi:home",
   },
