--- a/src/pages/carup.astro
+++ b/src/pages/carup.astro
@@ -72,7 +72,8 @@ import "swiper/css/pagination";
         display: block;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
+        background-color: black;
     }
 
     .pro-detail {
@@ -88,7 +89,7 @@ import "swiper/css/pagination";
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Conversor XML</title>
+        <title>CARUP DESPACHO</title>
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     </head>
 
@@ -130,17 +131,19 @@ import "swiper/css/pagination";
                                     class="display: inline"
                                 /></span
                             >
-                            Conversor variables JS a XML
+                            CARUP DESPACHO
                         </h2>
                         <div
                             class="mb-6 flex flex-col sm:flex-row sm:items-center"
                         >
                         </div>
                         <p class="mb-8 font-normal sm:text-base md:text-lg">
-                            Cuando trabajé con PHP, me encontré con un proceso repetitivo y tedioso de realizar variables xml desde datos obtenidos desde javascript. Para automatizar esta tarea fue que surge esta solución.
-                        </p>
-                        <p class="mb-8 font-normal sm:text-base md:text-lg">
-                            Podemos agregar un prefijo como ser el nombre de la variable de salida, o comillas, etc.
+                            Un simple administrador de tareas, esta app surge
+                            con la necesidad de guardar notas rápidas y llevar
+                            un seguimiento de tareas accesible. Construido
+                            enteramente en vanilla JS, usa el Local Storage del
+                            navegador para persistir las tareas en el mismo y
+                            así obtenerlas luego del cierre del mismo.
                         </p>
                         <hr />
                         <div
@@ -161,14 +164,26 @@ import "swiper/css/pagination";
                                         class="me-2 rounded bg-gray-100 px-2.5 py-0.5 font-medium text-gray-800 text-xs dark:bg-gray-700 dark:text-gray-300"
                                         >CSS</span
                                     >
+                                    <span
+                                        class="me-2 rounded bg-gray-100 px-2.5 py-0.5 font-medium text-gray-800 text-xs dark:bg-gray-700 dark:text-gray-300"
+                                        >Node</span
+                                    >
+                                    <span
+                                        class="me-2 rounded bg-gray-100 px-2.5 py-0.5 font-medium text-gray-800 text-xs dark:bg-gray-700 dark:text-gray-300"
+                                        >Spring Boot</span
+                                    >
+                                    <span
+                                        class="me-2 rounded bg-gray-100 px-2.5 py-0.5 font-medium text-gray-800 text-xs dark:bg-gray-700 dark:text-gray-300"
+                                        >MySQL</span
+                                    >
                                 </p>
                             </div>
                             <div>
                                 <a
-                                    href="https://codepen.io/NeroDovahkiin/full/QWwjqJQ"
+                                    href="/#contacto"
                                     class="inline-flex items-center justify-center rounded-lg bg-gray-50 p-2 px-4 font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
                                 >
-                                    <span class="w-full">Ver una demo</span>
+                                    <span class="w-full">Solicitar una demo</span>
                                     <svg
                                         class="ms-2 h-4 w-4 rtl:rotate-180"
                                         aria-hidden="true"
@@ -194,10 +209,22 @@ import "swiper/css/pagination";
                         >
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="/proyectos/conversor1.png" />
+                                    <img src="/proyectos/carup.png" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="/proyectos/conversor2.png" />
+                                    <img src="/proyectos/carup2.png" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="/proyectos/carup3.png" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="/proyectos/carup4.png" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="/proyectos/carup5.png" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="/proyectos/carup6.png" />
                                 </div>
                             </div>
                             <div class="swiper-button-next"></div>
@@ -206,10 +233,22 @@ import "swiper/css/pagination";
                         <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="/proyectos/conversor1.png" />
+                                    <img src="/proyectos/carup.png" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="/proyectos/conversor2.png" />
+                                    <img src="/proyectos/carup2.png" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="/proyectos/carup3.png" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="/proyectos/carup4.png" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="/proyectos/carup5.png" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="/proyectos/carup6.png" />
                                 </div>
                             </div>
                         </div>
@@ -227,7 +266,7 @@ import "swiper/css/pagination";
     var swiper = new Swiper(".mySwiper", {
         loop: true,
         spaceBetween:20,
-        slidesPerView: 2,
+        slidesPerView: 6,
         freeMode: true,
         watchSlidesProgress: true,
     });
