--- a/src/pages/task-manager.astro
+++ b/src/pages/task-manager.astro
@@ -89,6 +89,7 @@ import "swiper/css/pagination";
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Task Manager</title>
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     </head>
 
     <body>
