color white icons

--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -25,10 +25,10 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
       </div>
       <div class="w-full">
         <div class="flex justify-center py-10 m-auto gap-3 sm:justify-start sm:pl-8 md:pl-12 lg:pl-20  2xl:pl-70">
-          <a href="https://codepen.io/NeroDovahkiin" class="headIcon"><Icon name="mdi:codepen" class="size-10" /></a>
-          <a href="https://www.linkedin.com/in/federicogmenezes/" class="headIcon"><Icon name="mdi:linkedin" class="size-10" /></a>
-          <a href="https://www.instagram.com/nero_fgm/" class="headIcon"><Icon name="mdi:instagram" class="size-10" /></a>
-          <a href="https://github.com/NeroDovahkiin" class="headIcon"><Icon name="mdi:github" class="size-10" /></a>
+          <a href="https://codepen.io/NeroDovahkiin" class="headIcon"><Icon name="mdi:codepen" class="size-10 text-white" /></a>
+          <a href="https://www.linkedin.com/in/federicogmenezes/" class="headIcon"><Icon name="mdi:linkedin" class="size-10 text-white" /></a>
+          <a href="https://www.instagram.com/nero_fgm/" class="headIcon"><Icon name="mdi:instagram" class="size-10 text-white" /></a>
+          <a href="https://github.com/NeroDovahkiin" class="headIcon"><Icon name="mdi:github" class="size-10 text-white" /></a>
         </div>
       </div>
     </div>
