--- a/src/components/conocimientos.astro
+++ b/src/components/conocimientos.astro
@@ -7,22 +7,22 @@ const languages: Array<CompatibilityItem> = [
   {
     title: "HTML",
     icon: "languages/html",
-    url: "",
+    url: "#",
   },
   {
     title: "CSS",
     icon: "languages/css",
-    url: "",
+    url: "#",
   },
   {
     title: "Javascript",
     icon: "languages/javascript",
-    url: "",
+    url: "#",
   },
   {
     title: "Java",
     icon: "languages/java-plain",
-    url: "",
+    url: "#",
   },
   {
     title: "Python",
@@ -32,7 +32,7 @@ const languages: Array<CompatibilityItem> = [
   {
     title: "C#",
     icon: "languages/csharp",
-    url: "",
+    url: "#",
   },
   {
     title: "React",
@@ -42,7 +42,7 @@ const languages: Array<CompatibilityItem> = [
   {
     title: "MYSQL",
     icon: "languages/mysql",
-    url: "",
+    url: "#",
   },
 ];
 
