--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,9 @@ const description =
 
       if (themeSaved) {
         document.documentElement.dataset.theme = themeSaved;
-      } else {
+      } 
+      /*
+      else {
         const prefersDark = window.matchMedia(
           "(prefers-color-scheme: dark)",
         ).matches;
@@ -57,7 +59,7 @@ const description =
               ? "dark"
               : "light";
           }
-        });
+        });*/
     </script>
   </head>
   <body
